# GestorExpedientesV2

./: .env.example  ATAJO_INFOGOV_GUIDE.md  IMPLEMENTACION_RESUMEN.md  README.md  app.db  package-lock.json  package.json  populate_test_data.sql  tailwind.config.js  test_backend.py  test_notif.html  test_notif.sql
src-tauri/: .env.example  Cargo.toml  app.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: gestor_irrigacion.db
src-tauri/migrations/postgres/: 20260205000001_create_agentes.sql  20260205000002_create_expedientes.sql  20260205000003_create_vehiculos.sql  20260205000004_create_tickets.sql  20260218000001_add_expediente_fields.sql
src-tauri/migrations/sqlite/: 20260205000001_create_agentes.sql  20260205000002_create_expedientes.sql  20260205000003_create_vehiculos.sql  20260205000004_create_tickets.sql  20260218000001_add_expediente_fields.sql
src-tauri/resources/templates/: MODELO_ORDEN_DE_COMPRA.xlsx  Modelo_resumen_pago.xlsx  ~$MODELO_ORDEN_DE_COMPRA.xlsx
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agentes.rs  expedientes.rs  exports.rs  mod.rs  ordenes_compra.rs  tickets.rs  vehiculos.rs
src-tauri/src/db/: database.rs  manager.rs  migrations.rs  migrations_oc.rs  mod.rs
src-tauri/src/models/: agente.rs  expediente.rs  gasto_clasificacion.rs  mod.rs  orden_compra.rs  ticket.rs  vehiculo.rs
src-tauri/src/repositories/: expediente_repository.rs  mod.rs
src-tauri/src/services/: classifier.rs  mod.rs
src-tauri/src/utils/: excel_generator.rs  infogov_parser.rs  mod.rs  pdf_generator.rs
(+28 files in other folders)
